--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,8 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png"></img></a></p>
+        <p class="view"><a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png" width="40" height="40"></img></a></p>
+        <p class="view"><a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png" width="40" height="40"></img></a></p>
         {% endif %}
 
         {% if site.show_downloads %}
