--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,14 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
+        <div class="row">
+  <div class="column">
         <p class="view"><a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png" width="40" height="40"></img></a></p>
+        </div>
+      <div class="column">
         <p class="view"><a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png" width="40" height="40"></img></a></p>
+    </div>
+  </div>
         {% endif %}
 
         {% if site.show_downloads %}
