--- a/css/style.scss
+++ b/css/style.scss
@@ -2,3 +2,13 @@
 ---
 
 @import "{{ site.theme }}";
+ip {
+  width: 600px;
+  margin: 0 auto;
+  font-family: "Helvetica Neue", "Arial", sans-serif;
+  font-style: italic;
+  font-weight: 100;
+  font-variant-ligatures: normal;
+  font-size: 2rem;
+  letter-spacing: 1px;
+}
