--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,17 +60,15 @@
         <ul>
           <li><a href=""><span
             style="font-size: 9pt;font-family: Times New Roman,Times,serif">Home</span></a></li>
-          <li><a href="AcExp.html"><span
+          <li><a href="./AcExp.html"><span
             style="font-size:9pt;font-family: Times New Roman,Times,serif">Academic
             Expriences</span></a></li>
-          <li><a href="course.html"><span
+          <li><a href="./course.html"><span
             style="font-size: 9pt;font-family: Times New Roman,Times,serif">Teaching</span></a></li>
-          <li><a href="Mahdieh_CV.pdf"><span
+          <li><a href="./Mahdieh_CV.pdf"><span
             style="font-size: 9pt;font-family: Times New Roman,Times,serif">Curriculum
             Vitae</span></a></li>
-          <li><a href="pic.html"><span
-            style="font-size: 9pt;font-family: Times New Roman,Times,serif">Personal
-            Pictures</span></a></li>
+          
         </ul>
         </div>
           </div>
