--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         <div class="column">
          
         <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png" width="40" height="40"></img></a>
-          <\div>
+          </div>
         <div class="column">
         <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png" width="40" height="40"></img></a>
           </div>
