--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,13 +41,12 @@
         <div id="linkList2">
         <div id="lselect">
         <ul>
-          <li><a href=""><span
+          <li><a href="https://sites.google.com/site/cscabbasi/courses/cp92/lectures"><span
+            style="font-size:9pt;font-family: Times New Roman,Times,serif">Teaching</span></a></li>
+          
+          <li><a href="Blog"><span
             style="font-size: 9pt;font-family: Times New Roman,Times,serif">Home</span></a></li>
-          <li><a href="./AcExp.html"><span
-            style="font-size:9pt;font-family: Times New Roman,Times,serif">Academic
-            Expriences</span></a></li>
-          <li><a href="./course.html"><span
-            style="font-size: 9pt;font-family: Times New Roman,Times,serif">Teaching</span></a></li>
+          
           <li><a href="./Mahdieh_CV.pdf"><span
             style="font-size: 9pt;font-family: Times New Roman,Times,serif">Curriculum
             Vitae</span></a></li>
