--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     <![endif]-->
   </head>
   <body>
+    <div class="wrapper">
     
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
@@ -66,7 +67,7 @@
         </ul>
         {% endif %}
       </header>
-
+</div>
       <section>
 
       {{ content }}
