--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,14 +41,14 @@
           {%if true%}
           
         <ul>
-          <li><a href="https://sites.google.com/site/cscabbasi/courses/cp92/lectures"><span
-            style="font-size:9pt;font-family: Times New Roman,Times,serif">Teaching</span></a></li>
+          <li><a href="https://sites.google.com/site/cscabbasi/courses"><span
+            style="font-size:20pt;font-family: Times New Roman,Times,serif">Teaching</span></a></li>
           
-          <li><a href="Blog"><span
-            style="font-size: 9pt;font-family: Times New Roman,Times,serif">Home</span></a></li>
+          <li><a href="./Blog.html"><span
+            style="font-size: 20pt;font-family: Times New Roman,Times,serif">Blog</span></a></li>
           
           <li><a href="./Mahdieh_CV.pdf"><span
-            style="font-size: 9pt;font-family: Times New Roman,Times,serif">Curriculum
+            style="font-size: 20pt;font-family: Times New Roman,Times,serif">Curriculum
             Vitae</span></a></li>
           
         </ul>
