--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,14 +28,13 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <div class="row">
-        <div class="column">
-        <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png" width="40" height="40"></img></a>
-          </div>
-        <div class="column">
-        <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png" width="40" height="40"></img></a>
-          </div>
-        </div>
+        
+        
+        <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;" width="40" height="40"></img></a>
+        
+        <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"></img></a>
+        
+        
    
         {% endif %}
           {%if true%}
