--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,7 @@
         {% if site.github.is_user_page %}
         
         
-        <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;" width="40" height="40"></img></a>
-        
+        <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;" width="40" height="40"></img></a>
         <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"></img></a>
         
         
