--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,12 +29,9 @@
 
         {% if site.github.is_user_page %}
         
-        
         <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;" width="40" height="40"></img></a>
-        <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"></img></a>
-        
-        
-   
+        <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/LK.png"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;" width="40" height="40"></img></a>
+       
         {% endif %}
           {%if true%}
           
@@ -52,15 +49,7 @@
         </ul>
        
           {% endif %}
-       
-
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
+      
       </header>
 
       <section>
