--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,9 @@
         {% if site.github.is_user_page %}
         
         <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"></img></a>
+      
         <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/LK.png"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"></img></a>
+    <p style="clear: both;">
        
         {% endif %}
           {%if true%}
