--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
        
         {% endif %}
           {%if true%}
-          
+       <div>
         <ul>
           <li><a href="https://sites.google.com/site/cscabbasi/courses"><span
             style="font-size:20pt;font-family: Times New Roman,Times,serif">Teaching</span></a></li>
@@ -49,6 +49,7 @@
             Vitae</span></a></li>
           
         </ul>
+         </div>
        
           {% endif %}
       
