--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -7,6 +7,7 @@ body {
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#050505;
   font-weight:400;
+  position:fixed
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -57,7 +58,7 @@ a:hover small {
 
 .wrapper {
   width:auto;
-  margin:0 auto;
+  margin:0 0;
 }
 
 blockquote {
