--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -173,6 +173,7 @@ strong {
 
 section {
   width:auto;
+  float:right;
   
   padding-bottom:50px;
 }
@@ -216,7 +217,7 @@ footer {
   section {
     border:1px solid #e5e5e5;
     border-width:1px 0;
-    padding:20px 0 0 300px;
+    padding:20px 0;
     margin:0 auto;
   }
 
