--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -219,6 +219,8 @@ footer {
     padding:20px 0;
     float:right;
     margin:0 auto;
+    position:static;
+    left: 270px;
   }
 
   header a small {
