--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -172,7 +172,7 @@ strong {
 }
 
 section {
-  width:auto;
+  width:800px;
   float:right;
   padding-bottom:50px;
 }
@@ -220,7 +220,7 @@ footer {
     float:right;
     margin:0 auto;
     position:static;
-    left: 270px;
+    left: 30%;
   }
 
   header a small {
