--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -218,9 +218,8 @@ footer {
     border-width:1px 0;
     padding:20px 0;
     float:right;
-    margin:0 auto;
-    position:static;
-    left: 30%;
+    margin:0 0 20px;
+    left:30%;
   }
 
   header a small {
