--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -172,7 +172,7 @@ strong {
 }
 
 section {
-  width:800px;
+  width:1000px;
   float:right;
   padding-bottom:50px;
 }
@@ -219,7 +219,7 @@ footer {
     padding:20px 0;
     float:right;
     margin:0 0 20px;
-    left:30%;
+    right:30%;
   }
 
   header a small {
