--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -219,7 +219,7 @@ footer {
     padding:20px 0;
     float:right;
     margin:0 0 20px;
-    right:30%;
+    right:100px;
   }
 
   header a small {
