--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         
         <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"></img></a>
       
-        <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/LK.png"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"></img></a>
+        <a href="https://www.linkedin.com/in/mahdieh-abbasi-2ba84b44/"><img src="/images/LK.png"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"></img></a>
     <p style="clear: both;">
        
         {% endif %}
