--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
        <div>
         <ul>
           <li><a hred="./publications.md"><span
-            style="font-size:20pt;font-family: Times New Roman,Times,serif"></span></a><li>
+            style="font-size:20pt;font-family: Times New Roman,Times,serif">Publications</span></a><li>
           
           <li><a href="https://sites.google.com/site/cscabbasi/courses"><span
             style="font-size:20pt;font-family: Times New Roman,Times,serif">Teaching</span></a></li>
