--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,11 +38,11 @@
           {%if true%}
        <div>
         <ul>
-          <li><a hred="./publications.md"><span
+          <li><a hred="/publications.md"><span
             style="font-size:20pt;font-family: Times New Roman,Times,serif">Publications</span></a><li>
           <li><a href="https://sites.google.com/site/cscabbasi/courses"><span
             style="font-size:20pt;font-family: Times New Roman,Times,serif">Teaching</span></a></li>
-          <li><a href="./Blog.html"><span
+          <li><a href="/Blog.html"><span
             style="font-size: 20pt;font-family: Times New Roman,Times,serif">Blog</span></a></li>
           <li><a href="./Mahdieh_CV.pdf"><span
             style="font-size: 20pt;font-family: Times New Roman,Times,serif">Curriculum
