--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,8 @@
         <ul>
           
           
+          <li><a href="./index.html"><span
+            style="font-size: 20pt;font-family: Times New Roman,Times,serif">Home</span></a></li>
           
           <li><a href="./Mahdieh_CV.pdf"><span
             style="font-size: 20pt;font-family: Times New Roman,Times,serif">Curriculum
