--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         {% if site.github.is_user_page %}
         
         <a href="https://scholar.google.ca/citations?user=IIJuvsYAAAAJ&hl=en"><img src="/images/GS.png"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"></img></a>
-      
+        <a href="https://github.com/mahdaneh"><img src="/images/GH.png"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"></img></a>
         <a href="https://www.linkedin.com/in/mahdieh-abbasi-2ba84b44/"><img src="/images/LK.png"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"></img></a>
     <p style="clear: both;">
        
@@ -43,13 +43,14 @@
           <li><a href="./index.html"><span
             style="font-size: 20pt;font-family: Times New Roman,Times,serif">Home</span></a></li>
           
-          <li><a href="./Mahdieh_CV.pdf"><span
-            style="font-size: 20pt;font-family: Times New Roman,Times,serif">Curriculum
-            Vitae</span></a></li>
+          
           <li><a href="/Blog.html"><span
             style="font-size: 20pt;font-family: Times New Roman,Times,serif">Blog</span></a></li>
           <li><a href="https://sites.google.com/site/cscabbasi/courses"><span
             style="font-size:20pt;font-family: Times New Roman,Times,serif">Teaching</span></a></li>
+          <li><a href="./Mahdieh_CV.pdf"><span
+            style="font-size: 20pt;font-family: Times New Roman,Times,serif">Curriculum
+            Vitae</span></a></li>
           
         </ul>
          </div>
