--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,8 @@
           
           <li><a href="./index.html"><span
             style="font-size: 20pt;font-family: Times New Roman,Times,serif">Home</span></a></li>
-          
+          <li><a href="./publications.html"><span
+            style="font-size: 20pt;font-family: Times New Roman,Times,serif">Publications</span></a></li>
           
           <li><a href="/Blog.html"><span
             style="font-size: 20pt;font-family: Times New Roman,Times,serif">Blog</span></a></li>
