--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -569,6 +569,31 @@ div.img img{
     width:80%;
     vertical-align:middle;
 }
+
+
+
+div.parent2{ 
+    display:table;
+    width:100%;
+    
+}
+div.text2{ 
+    
+    vertical-align:middle;
+    display:table-cell;
+    
+}
+div.parent2 .img{
+    vertical-align:middle;
+    display:table-cell;
+    
+    
+}
+div.img2 img{ 
+    width:50%;
+    vertical-align:middle;
+}
+
 @media print, screen and (max-width: 480px) {
   body {
     padding:15px;
