--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -618,21 +618,10 @@ figcaption {
 }
 
 
-
-
-.list-group-item {
-    /* position: relative; */
-    display: block;
-    padding: 10px 15px;
-    margin-bottom: -1px;
-    background-color: #fff;
-    border: 1px solid #ddd;
-}
-
 .list-group {
-    /* border-radius: 4px; */
-    /* -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.075); */
-    /* box-shadow: 0 1px 2px rgba(0,0,0,.075); */
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.075);
+    box-shadow: 0 1px 2px rgba(0,0,0,.075);
 }
 .list-group {
     padding-left: 0;
@@ -658,6 +647,8 @@ ul {
     padding-inline-start: 40px;
 }
 
+
+
 .list-group-item:last-child {
     margin-bottom: 0;
     border-bottom-right-radius: 4px;
@@ -668,7 +659,7 @@ ul {
     border-top-right-radius: 4px;
 }
 .list-group-item {
-    /* position: relative; */
+    position: relative;
     display: block;
     padding: 10px 15px;
     margin-bottom: -1px;
@@ -685,6 +676,9 @@ li {
     display: list-item;
     text-align: -webkit-match-parent;
 }
+
+
+
 
 .media:first-child {
     margin-top: 0;
@@ -706,3 +700,40 @@ div {
     display: block;
 }
 
+.media>.pull-left {
+    margin-right: 10px;
+}
+.pull-left {
+    float: left!important;
+}
+.text-center {
+    text-align: center;
+}
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+user agent stylesheet
+div {
+    display: block;
+}
+
+.media>.pull-left {
+    margin-right: 10px;
+}
+.pull-left {
+    float: left!important;
+}
+.text-left {
+    text-align: left;
+}
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+user agent stylesheet
+div {
+    display: block;
+}
