path problem solved

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,12 +40,12 @@
         <ul>
           
           
-          <li><a href="~/index.html"><span
+          <li><a href="./index.html"><span
             style="font-size: 14pt;font-family: Times New Roman,Times,serif">Home</span></a></li>
-          <li><a href="~/publications.html"><span
+          <li><a href="./publications.html"><span
             style="font-size: 14pt;font-family: Times New Roman,Times,serif">Publications</span></a></li>
           
-          <li><a href="~/Blog.html"><span
+          <li><a href="./Blog.html"><span
             style="font-size: 14pt;font-family: Times New Roman,Times,serif">Blog</span></a></li>
           <li><a href="https://sites.google.com/site/cscabbasi/courses"><span
             style="font-size:14pt;font-family: Times New Roman,Times,serif">Teaching</span></a></li>
