--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,12 +46,11 @@
             style="font-size: 14pt;font-family: Times New Roman,Times,serif">Publications</span></a></li>
           
           <li><a href="./Blog.html"><span
-            style="font-size: 14pt;font-family: Times New Roman,Times,serif">Blog</span></a></li>
+            style="font-size: 14pt;font-family: Times New Roman,Times,serif">Blogs</span></a></li>
           <li><a href="https://sites.google.com/site/cscabbasi/courses"><span
-            style="font-size:14pt;font-family: Times New Roman,Times,serif">Teaching</span></a></li>
+            style="font-size:14pt;font-family: Times New Roman,Times,serif">Teaching Materials</span></a></li>
           <li><a href="./Mahdieh_CV.pdf"><span
-            style="font-size: 14pt;font-family: Times New Roman,Times,serif">Curriculum
-            Vitae</span></a></li>
+            style="font-size: 14pt;font-family: Times New Roman,Times,serif">CV</span></a></li>
           
         </ul>
          </div>
