--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,16 +40,16 @@
         <ul>
           
           
-          <li><a href="./index.html"><span
+          <li><a href="https://mahdaneh.github.io/index.html"><span
             style="font-size: 14pt;font-family: Times New Roman,Times,serif">Home</span></a></li>
-          <li><a href="./publications.html"><span
+          <li><a href="https://mahdaneh.github.io/publications.html"><span
             style="font-size: 14pt;font-family: Times New Roman,Times,serif">Publications</span></a></li>
           
-          <li><a href="./Blog.html"><span
+          <li><a href="https://mahdaneh.github.io/Blog.html"><span
             style="font-size: 14pt;font-family: Times New Roman,Times,serif">Blogs</span></a></li>
           <li><a href="https://sites.google.com/site/cscabbasi/courses"><span
             style="font-size:14pt;font-family: Times New Roman,Times,serif">Teaching Materials</span></a></li>
-          <li><a href="./Mahdieh_CV.pdf"><span
+          <li><a href="https://mahdaneh.github.io/Mahdieh_CV.pdf"><span
             style="font-size: 14pt;font-family: Times New Roman,Times,serif">CV</span></a></li>
           
         </ul>
