--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -111,6 +111,14 @@ header {
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
 }
+div.homepage_list ul li{
+list-style-type: none;
+}
+
+.logo_class{
+    
+
+}
 
 ul.downloads {
   list-style:none;
