--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <!--<h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>-->
         
         {% if site.logo %}
-          <img class="logo_img" src="{{site.logo | relative_url}}" alt="Logo" />
+          <img id="logo_img" src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
@@ -36,10 +36,8 @@
        
         {% endif %}
           {%if true%}
-       <div>
+       <div class="homepage_list">
         <ul>
-          
-          
           <li><a href="https://mahdaneh.github.io/index.html"><span
             style="font-size: 14pt;font-family: Times New Roman,Times,serif">Home</span></a></li>
           <li><a href="https://mahdaneh.github.io/publications.html"><span
