--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -113,11 +113,13 @@ header {
 }
 div.homepage_list ul li{
 list-style-type: none;
+float: left
 }
 
 #logo_imgs{
   border-radius: 50%;
 }
+
 
 ul.downloads {
   list-style:none;
