--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -111,10 +111,11 @@ header {
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
 }
+
 div.homepage_list ul li{
 list-style-type: none;
-float: left
-margin:0
+float: left;
+margin: 0px;
 }
 
 #logo_img{
