--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -111,7 +111,9 @@ header {
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
 }
-
+div.homepage_list{
+  margin: 0;
+}
 div.homepage_list ul li{
 list-style-type: none;
 float: left;
