--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -114,7 +114,7 @@ header {
 div.homepage_list{
   margin: 0;
 }
-div.homepage_list a{
+div.homepage_list ul li a {
   float: left;
   margin: 0;
 }
