--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,14 +39,14 @@
        <div class="homepage_list">
         <ul>
           <li><a href="https://mahdaneh.github.io/index.html"><span
-            style="font-size: 14pt;font-family: Times New Roman,Times,serif">Home</span></a></li>
+            style="font-size: 14pt;font-family: Times New Roman,Times,serif; margin:0; float:left">Home</span></a></li>
           <li><a href="https://mahdaneh.github.io/publications.html"><span
-            style="font-size: 14pt;font-family: Times New Roman,Times,serif">Publications</span></a></li>
+            style="font-size: 14pt;font-family: Times New Roman,Times,serif;margin:0; float:left">Publications</span></a></li>
           
           <li><a href="https://mahdaneh.github.io/Blog.html"><span
-            style="font-size: 14pt;font-family: Times New Roman,Times,serif">Blogs</span></a></li>
+            style="font-size: 14pt;font-family: Times New Roman,Times,serif;margin:0; float:left">Blogs</span></a></li>
           <li><a href="https://sites.google.com/site/cscabbasi/courses"><span
-            style="font-size:14pt;font-family: Times New Roman,Times,serif">Teaching Materials</span></a></li>
+            style="font-size:14pt;font-family: Times New Roman,Times,serif;margin:0; float:left">Teaching Materials</span></a></li>
           
           
         </ul>
