--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -548,3 +548,15 @@ h3:target {
   from { background: yellow; }
   to { background: white; }
 }
+
+#ToC{
+  font-family: Arial, Helvetica, sans-serif;
+  color:Black;
+  background-color: silver;
+  border-radius: 10px;
+  width: 40%;
+  border: 1px solid Black;
+  padding: 10px;
+  margin: 10px;
+  float:right;
+}
