--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -552,7 +552,7 @@ h3:target {
 #ToC{
   font-family: Arial, Helvetica, sans-serif;
   color:Black;
-  background-color: silver;
+  background-color:white;
   border-radius: 10px;
   width: 40%;
   border: 1px solid Black;
