--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,5 @@
 ---
 layout: default
-toc_nav_id: toc-nav
 ---
 
 <head>
@@ -27,7 +26,7 @@ toc_nav_id: toc-nav
   </head>
 
 <header>
-  <div class="container">
+  <div>
   <h1>{{ page.title }}</h1>
   {%- if page.description -%}
     <h2>{{ page.description }}</h2>
@@ -35,33 +34,17 @@ toc_nav_id: toc-nav
   </div>
 </header>
 
-<div class="container">
+<section>
+<div>
 
-  {%- if page.use_toc -%}
-    <div class="row">
-      <main class="col-xl-9" id="main">
-        <nav class="navbar-light d-inline">
-          <button class="navbar-toggler d-none bg-white" type="button" id="show-sidebar" onclick="toggleNav()">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </nav>
-        
-        <h2>Contents</h2>
-        {% include toc.html html=content %}
-        {{ content }}
-      </main>
-
-      <nav class="d-none d-xl-block col-xl-3 toc-nav" id="{{ layout.toc_nav_id }}">
-        <nav class="navbar navbar-light bg-white">
-          <span class="navbar-brand">Contents</span>
-          <button class="navbar-toggler" type="button" onclick="toggleNav()">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </nav>
-        {% include toc.html html=content class="nav" anchor_class="nav-link" %}
-      </nav>
-    </div>
+  {% if page.toc %}
+<script>
+var _post_ = $get("#post")||$get("#content");
+addTOC(_post_, _post_.firstChild.nextSibling.nextSibling);
+</script>
+{% endif %}
   {%- else -%}
     {{ content }}
   {%- endif -%}
 </div>
+</section>
