--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -454,7 +454,7 @@ div {
   margin-right: auto;
   width: 50%;
 }
-.sidebox {
+#toc {
   border: 1px dotted rgb(127, 127, 127);
   padding: 4px 3px 4px 6px; /* top right bottom left */
   min-width: 100px ! important;
@@ -467,4 +467,4 @@ div {
   max-width: 50%;
   width: 35%;
 }
-.sidebox ul { padding:0em 0em 0em 1.3em; margin:0em; }//TRBL
+// .sidebox ul { padding:0em 0em 0em 1.3em; margin:0em; }//TRBL
