--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -213,6 +213,10 @@ footer {
   bottom:50px;
   -webkit-font-smoothing:subpixel-antialiased;
 }
+.highlight{
+  background-color: yellowgreen;
+  color: blue;
+}
 
 @media print, screen and (max-width: 960px) {
 
