--- a/css/blog_style.css
+++ b/css/blog_style.css
@@ -2,8 +2,8 @@ body {
     background-color: #fff;
     padding:10px;
     font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color:#727272;
-    font-weight:400;
+    color:#0e0c0c;
+    font-weight:200;
   }
   
   h1, h2, h3, h4, h5, h6 {
@@ -53,19 +53,31 @@ body {
   }
  
   .wrapper {
-    width:900px;
-    margin:0 auto;
+    width:80%;
+    margin:10px 0px 0px 10px;
   }
   header.TOC{
-    width:170px;
+    width:20%;
     float:left;
     position:fixed;
+    padding: 10px;
     -webkit-font-smoothing:subpixel-antialiased;
   }  
+  header.TOC ul li{
+    list-style-type:none
+  }
 
 section {
-    width: 85%;
+    width: 60%;
     height:auto;
     float:right;
     padding-bottom:50px;
+  }
+
+
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
   }
