--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -455,17 +455,7 @@ div {
   margin-right: auto;
   width: 50%;
 }
-#toc {
-  border: 1px dotted rgb(127, 127, 127);
-  padding: 4px 3px 4px 6px; /* top right bottom left */
-  min-width: 100px ! important;
-  float: right ! important;
-  font-size: 90%;
-  margin-top: 1px;
-  margin-bottom: 1px;
-  margin-left: 6px;
-  visibility: visible;
-  max-width: 50%;
-  width: 35%;
+
+img logo_img{
+  border-radius: 50%
 }
-// .sidebox ul { padding:0em 0em 0em 1.3em; margin:0em; }//TRBL
