--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -129,13 +129,13 @@ div.homepage_list svg{
   display: inline-flex;
   align-self: center;
 }
-div.social a{
+header.social a{
   float: left;
   display: inline;
   padding:5px;
   margin-left: 5px;
 }
-div.social svg{
+header.social svg{
   height:1em;
   width:1em;
 }
