--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -141,6 +141,9 @@ header.social a{
 header.social svg{
   height:3em;
   width:3em;
+  padding: 1px;
+  margin-left: 1px;
+  color: #267CB9;
 }
 
 ul.downloads {
