--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -126,9 +126,12 @@ margin: 0px;
 padding:0;
 -webkit-padding-start: 0;
 }
+div.homepage_list svg a{
+  vertical-align: middle;
+  display: inline-block;
+  
+}
 div.homepage_list svg{
-  display: inline-flex;
-  align-self: center;
   height:1em;
   width:1em;
 }
