--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -134,6 +134,7 @@ div.homepage_list svg a text{
 div.homepage_list svg{
   height:1em;
   width:1em;
+  color:dodgerblue;
 }
 div.homepage_list text{
   padding-left: 2px;
@@ -149,7 +150,7 @@ header.social svg{
   width:2em;
   padding: 1px;
   margin-left: 1px;
-  color: black
+  color: black;
 }
 
 ul.downloads {
