--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -131,7 +131,7 @@ div.homepage_list svg a text{
   display: inline-block;
   
 }
-div.homepage_list svg{
+div.homepage_list svg.list_svg{
   height:1em;
   width:1em;
   color:dodgerblue;
