--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -135,6 +135,7 @@ div.homepage_list svg a text{
   height:1em;
   width:1em;
   color:dodgerblue;
+  float:left;
 }
 div.homepage_list text{
   padding-left: 2px;
