--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -136,6 +136,7 @@ div.homepage_list svg a text{
   width:1em;
   color:dodgerblue;
   float:left;
+  display: block;
 }
 div.homepage_list text{
   padding-left: 2px;
