--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -135,9 +135,8 @@ div.homepage_list svg a text{
   height:1em;
   width:1em;
   color:dodgerblue;
-  display: block;
 }
-div.homepage_list text{
+div.homepage_list.text{
   padding-left: 2px;
 }
 header.social a{
