--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -206,7 +206,11 @@ div.news ul li{
   -webkit-padding-start: 0;
   list-style-type: none;
   padding: 0px;
+  margin:0px
 
+}
+.green{
+  color:green;
 }
 small {
   font-size:11px;
