--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -204,7 +204,7 @@ section {
 }
 div.news ul li{
   -webkit-padding-start: 0;
-  list-style-type: none;
+  list-style-type: circle;
   padding: 0px;
   margin:0px
 
