--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -209,7 +209,7 @@ div.news ul li{
   margin:0px
 
 }
-div.news .green{
+#green{
   color:green;
 }
 small {
@@ -293,6 +293,10 @@ footer {
 table td.hashtag{
   color:rgb(0, 119, 255);
   font-size: 10px;
+}
+table td.time{
+  
+  font-size: 13px;
 }
 /**/
 div.parent{ 
