--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -335,6 +335,10 @@ div.img2 img2{
     vertical-align:middle;
 }
 
+div.img svg{
+  color:blue;
+}
+
 
 @media print, screen and (max-width: 480px) {
   body {
