--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -310,6 +310,7 @@ div.text{
     vertical-align:middle;
     margin-left:0; 
     display:table-cell;
+    text-align: left;
     
 }
 div.parent .img{
