--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -291,6 +291,15 @@ footer {
 }
 
 
+table td.hashtag{
+  color:rgb(0, 119, 255);
+  font-size: 10px;
+  text-align: left;
+}
+table td.time{
+  font-size: 12px;
+  text-align: left;
+}
 
 /**/
 div.parent{ 
