--- a/css/blog_style.css
+++ b/css/blog_style.css
@@ -96,6 +96,7 @@ table td.time{
   background-color: #f3f29c;
   border-left: 6px solid #e8f804;
   padding:10px;
+  border-radius: 10px;
 
 }
 .info p{
@@ -103,4 +104,11 @@ margin:20px;
 font-weight:bold;
 font-size: 18px;
 font-family: arial;
+display: table-cell;
+vertical-align:middle;
+}
+.info svg{
+ display: table-cell;
+ vertical-align:middle;
+    
 }
