--- a/css/blog_style.css
+++ b/css/blog_style.css
@@ -146,3 +146,9 @@ div.parent .img{
 font-style: italic;
 font-size: 15px;
 }
+
+iframe[seamless] {
+  border: none;
+  width: 100%;
+  display: block;
+}
