--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -508,291 +508,137 @@ div {
 // ***************************
 // time line from https://codepen.io/hunzaboy/pen/qBWRBXw
 // *********************
-
-$content-width: calc(40vw - 84px);
-$margin: 20px;
-$spacing: 20px;
-$bdrs: 6px;
-$circle-size: 40px;
-$icon-size: 32px;
-$bdrs-icon: 100%;
-
-$color1: #9251ac;
-$color2: #f6a4ec;
-
-$color3: #87bbfe;
-$color4: #555ac0;
-
-$color5: #24b47e;
-$color6: #aff1b6;
 * {
   box-sizing: border-box;
 }
+
+/* Set a background color */
+body {
+  background-color: #474e5d;
+  font-family: Helvetica, sans-serif;
+}
+
+/* The actual timeline (the vertical ruler) */
 .timeline {
-  display: flex;
-  flex-direction: column;
-  margin: $margin auto;
   position: relative;
-
-  &__event {
-    margin-bottom: $spacing;
-    position: relative;
-    display: flex;
-    margin: $spacing 0;
-    border-radius: $bdrs;
-    align-self: center;
-    width: 50vw;
-
-    &:nth-child(2n + 1) {
-      flex-direction: row-reverse;
-      .timeline__event__date {
-        border-radius: 0 $bdrs $bdrs 0;
-      }
-      .timeline__event__content {
-        border-radius: $bdrs 0 0 $bdrs;
-      }
-
-      .timeline__event__icon {
-        &:before {
-          content: "";
-          width: 2px;
-          height: 100%;
-          background: $color2;
-          position: absolute;
-          top: 0%;
-          left: 50%;
-          right: auto;
-          z-index: -1;
-          transform: translateX(-50%);
-          animation: fillTop 2s forwards 4s ease-in-out;
-        }
-        &:after {
-          content: "";
-          width: 100%;
-          height: 2px;
-          background: $color2;
-          position: absolute;
-          right: 0;
-          z-index: -1;
-          top: 50%;
-          left: auto;
-          transform: translateY(-50%);
-          animation: fillLeft 2s forwards 4s ease-in-out;
-        }
-      }
-    }
-
-    &__title {
-      font-size: 1.2rem;
-      line-height: 1.4;
-      text-transform: uppercase;
-
-      font-weight: 600;
-      color: $color1;
-      letter-spacing: 1.5px;
-    }
-    &__content {
-      padding: $spacing;
-      box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
-        0 18px 36px -18px rgba(0, 0, 0, 0.3),
-        0 -12px 36px -8px rgba(0, 0, 0, 0.025);
-      background: #fff;
-      width: $content-width;
-      border-radius: 0 $bdrs $bdrs 0;
-    }
-    &__date {
-      color: $color2;
-      font-size: 1.5rem;
-      font-weight: 600;
-      background: $color1;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      white-space: nowrap;
-      padding: 0 $spacing;
-      border-radius: $bdrs 0 0 $bdrs;
-    }
-    &__icon {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: $color1;
-      padding: $spacing;
-      align-self: center;
-      margin: 0 $spacing;
-      background: $color2;
-      border-radius: $bdrs-icon;
-      width: $circle-size;
-      box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
-        0 18px 36px -18px rgba(0, 0, 0, 0.3),
-        0 -12px 36px -8px rgba(0, 0, 0, 0.025);
-      padding: 40px;
-      height: $circle-size;
-      position: relative;
-
-      i {
-        font-size: $icon-size;
-      }
-
-      &:before {
-        content: "";
-        width: 2px;
-        height: 100%;
-        background: $color2;
-        position: absolute;
-        top: 0%;
-        z-index: -1;
-        left: 50%;
-        transform: translateX(-50%);
-        animation: fillTop 2s forwards 4s ease-in-out;
-      }
-      &:after {
-        content: "";
-        width: 100%;
-        height: 2px;
-        background: $color2;
-        position: absolute;
-        left: 0%;
-        z-index: -1;
-        top: 50%;
-        transform: translateY(-50%);
-        animation: fillLeftOdd 2s forwards 4s ease-in-out;
-      }
-    }
-    &__description {
-      flex-basis: 60%;
-    }
-
-    &--type2 {
-      &:after {
-        background: $color4;
-      }
-      .timeline__event__date {
-        color: $color3;
-        background: $color4;
-      }
-
-      &:nth-child(2n + 1) {
-        .timeline__event__icon {
-          &:before,
-          &:after {
-            background: $color3;
-          }
-        }
-      }
-
-      .timeline__event__icon {
-        background: $color3;
-        color: $color4;
-        &:before,
-        &:after {
-          background: $color3;
-        }
-      }
-      .timeline__event__title {
-        color: $color4;
-      }
-      .timeline__event__title {
-      }
-    }
-
-    &--type3 {
-      &:after {
-        background: $color5;
-      }
-      .timeline__event__date {
-        color: $color6;
-        background-color: $color5;
-      }
-
-      &:nth-child(2n + 1) {
-        .timeline__event__icon {
-          &:before,
-          &:after {
-            background: $color6;
-          }
-        }
-      }
-
-      .timeline__event__icon {
-        background: $color6;
-        color: $color5;
-        &:before,
-        &:after {
-          background: $color6;
-        }
-      }
-      .timeline__event__title {
-        color: $color5;
-      }
-      .timeline__event__title {
-      }
-    }
-    &:last-child {
-      .timeline__event__icon {
-        &:before {
-          content: none;
-        }
-      }
-    }
-  }
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-@media (max-width: 786px) {
-  .timeline__event {
-    flex-direction: column;
-    align-self: center;
-    &__content {
-      width: 100%;
-    }
-
-    &__icon {
-      border-radius: $bdrs $bdrs 0 0;
-      width: 100%;
-      margin: 0;
-      box-shadow: none;
-
-      &:before,
-      &:after {
-        display: none;
-      }
-    }
-    &__date {
-      border-radius: 0;
-      padding: $spacing;
-    }
-
-    &:nth-child(2n + 1) {
-      flex-direction: column;
-      align-self: center;
-
-      .timeline__event__date {
-        border-radius: 0;
-        padding: $spacing;
-      }
-
-      .timeline__event__icon {
-        border-radius: $bdrs $bdrs 0 0;
-        margin: 0;
-      }
-    }
-  }
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  background-color: white;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
 }
 
-@keyframes fillLeft {
-  100% {
-    right: 100%;
-  }
+/* Container around content */
+.container {
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+  width: 50%;
 }
 
-@keyframes fillTop {
-  100% {
-    top: 100%;
-  }
+/* The circles on the timeline */
+.container::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -17px;
+  background-color: white;
+  border: 4px solid #FF9F55;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
 }
 
-@keyframes fillLeftOdd {
-  100% {
-    left: 100%;
+/* Place the container to the left */
+.left {
+  left: 0;
+}
+
+/* Place the container to the right */
+.right {
+  left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  right: 30px;
+  border: medium solid white;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent white;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  left: 30px;
+  border: medium solid white;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent white transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+  left: -16px;
+}
+
+/* The actual content */
+.content {
+  padding: 20px 30px;
+  background-color: white;
+  position: relative;
+  border-radius: 6px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+/* Place the timelime to the left */
+  .timeline::after {
+    left: 31px;
+  }
+
+/* Full-width containers */
+  .container {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+
+/* Make sure that all arrows are pointing leftwards */
+  .container::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+
+/* Make sure all circles are at the same spot */
+  .left::after, .right::after {
+    left: 15px;
+  }
+
+/* Make all right containers behave like the left ones */
+  .right {
+    left: 0%;
   }
 }
