--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -511,7 +511,9 @@ div {
 * {
   box-sizing: border-box;
 }
-
+body.test{
+  background-color: rgb(17, 16, 16);
+}
 /* The actual timeline (the vertical ruler) */
 .timeline {
   position: relative;
